# turtlebot_highlevel_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: default.yaml  default_mapping.yaml  robot_configuration.rviz
include/turtlebot_laserscan_range/: Algorithm.hpp  TurtlebotHighlevelController.hpp
include/turtlebot_laserscan_range/backup/: Algorithm.hpp  TurtlebotHighlevelController.hpp
include/turtlebot_mapping/: TurtlebotMapping.hpp
launch/: gmaping.launch  teleop.launch  turtlebot_highlevel_controller.launch  turtlebot_in_stage_htwg_2 (copy).launch  turtlebot_in_stage_htwg_2.launch  turtlebot_in_stage_htwg_2_noRviz.launch
maps/: apartment.yaml  map33.yaml  piller.yaml  turtlebot_with_laser.inc
maps/stage/: apartment.world  piller.world
msg/: Target.msg
src/: fibonacci_client.cpp  mapping_client.cpp
src/turtlebot_laserscan_range/: Algorithm.cpp  TurtlebotHighlevelController.cpp  turtlebot_highlevel_controller_node.cpp
src/turtlebot_laserscan_range/backup/: Algorithm.cpp
src/turtlebot_mapping/: TurtlebotMapping.cpp  turtlebot_mapping_node.cpp
